--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   z-index: -1;
   filter: brightness(70%);
 }
